--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
   "name": "codeinchq/lib-errordisplay",
-  "version": "1.0.7",
-  "description": "Code Inc.'s exception display library",
+  "version": "1.0.8",
+  "description": "Code Inc.'s error display library",
   "homepage": "https://github.com/codeinchq/lib-errordisplay",
   "type": "library",
-  "license": "proprietary",
+  "license": "MIT",
   "require": {
     "php": ">=7.0",
     "kevinlebrun/colors.php": "^1.0"
