--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,20 @@
 {
   "name": "codeinchq/lib-errordisplay",
-  "version": "1.0.13",
+  "version": "1.1.0",
   "description": "Code Inc.'s error display library",
   "homepage": "https://github.com/codeinchq/lib-errordisplay",
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": ">=7.0",
-    "kevinlebrun/colors.php": "^1.0"
+    "php": ">=7.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^7",
+    "kevinlebrun/colors.php": "^1"
   },
   "autoload": {
-    "psr-4": {
-      "CodeInc\\ErrorDisplay\\": "src"
+    "psr-0": {
+      "": "src"
     }
   },
   "authors": [
@@ -26,5 +29,8 @@
     "preferred-install": {
       "*": "dist"
     }
+  },
+  "suggest": {
+    "kevinlebrun/colors.php": "Allows colored exception display in CLI"
   }
 }
