--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "codeinchq/lib-errordisplay",
-  "version": "1.1.2",
+  "name": "codeinc/lib-errordisplay",
+  "version": "1.1.3",
   "description": "Code Inc.'s error display library",
-  "homepage": "https://github.com/codeinchq/lib-errordisplay",
+  "homepage": "https://github.com/CodeIncHQ/lib-errordisplay",
   "type": "library",
   "license": "MIT",
   "require": {
@@ -13,8 +13,8 @@
     "kevinlebrun/colors.php": "^1"
   },
   "autoload": {
-    "psr-0": {
-      "": "src"
+    "psr-4": {
+      "CodeInc\\ErrorDisplay\\": "src"
     }
   },
   "authors": [
