--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "codeinc/lib-errordisplay",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Code Inc.'s error display library",
   "homepage": "https://github.com/CodeIncHQ/lib-errordisplay",
   "type": "library",
@@ -31,6 +31,6 @@
     }
   },
   "suggest": {
-    "kevinlebrun/colors.php": "Allows colored exception display in CLI"
+    "kevinlebrun/colors.php": "Allows colored exception display in the console"
   }
 }
