--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "codeinc/lib-errordisplay",
-  "version": "1.1.4",
+  "name": "codeinc/error-renderer",
+  "version": "1.2.0",
   "description": "Code Inc.'s error display library",
-  "homepage": "https://github.com/CodeIncHQ/lib-errordisplay",
+  "homepage": "https://github.com/CodeIncHQ/ErrorRenderer",
   "type": "library",
   "license": "MIT",
   "require": {
