--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "codeinc/error-renderer",
-  "version": "1.3.2-beta.2",
+  "version": "1.3.2",
   "description": "Code Inc.'s error display library",
   "homepage": "https://github.com/CodeIncHQ/ErrorRenderer",
   "type": "library",
