--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
   "type": "library",
   "license": "MIT",
   "require": {
-    "php": ">=7.1"
+    "php": ">=7.1",
+    "matthiasmullie/minify": "^1.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^7",
