--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
   "name": "codeinc/error-renderer",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "description": "Code Inc.'s error display library",
   "homepage": "https://github.com/CodeIncHQ/ErrorRenderer",
   "type": "library",
   "license": "MIT",
   "require": {
     "php": ">=7.1",
-    "matthiasmullie/minify": "^1.3"
+    "matthiasmullie/minify": "^1.3",
+    "kevinlebrun/colors.php": "^1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7",
-    "kevinlebrun/colors.php": "^1"
+    "phpunit/phpunit": "^7"
   },
   "autoload": {
     "psr-4": {
@@ -30,8 +30,5 @@
     "preferred-install": {
       "*": "dist"
     }
-  },
-  "suggest": {
-    "kevinlebrun/colors.php": "Allows colored exception display in the console"
   }
 }
